--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title: Ahto blogi
 email: ahto.jalak@ttu.ee
 description: >-
   See blogi on koostatud iseseisvalt ja tekst on puhtalt isiklik arvamus. See blogi on ITSPEA koolitöö tulemus.
-baseurl: ""
-url: "https://ahtoj.github.io/blogi"
+baseurl: /blogi
+url: ahtoj.github.io
 twitter_username: aht_o
 github_username:  ahtoj
 
