--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: ahto.jalak@ttu.ee
 description: >-
   See blogi on koostatud iseseisvalt ja tekst on puhtalt isiklik arvamus. See blogi on ITSPEA koolitöö tulemus.
 baseurl: /blogi
-url: ahtoj.github.io
+url: https://ahtoj.github.io
 twitter_username: aht_o
 github_username:  ahtoj
 
